crates/a2a-wasm-component/tests/snapshots/server_integration_test__get_task_after_send.snap
---
source: crates/a2a-wasm-component/tests/server_integration_test.rs
expression: steps
---
[
  {
    "got_task_id": true,
    "step": "send_message"
  },
  {
    "step": "get_task",
    "task_id_matches": true
  }
]
