crates/a2a-wasm-component/tests/snapshots/server_integration_test__journey_error_handling.snap
---
source: crates/a2a-wasm-component/tests/server_integration_test.rs
expression: steps
---
[
  {
    "error": true,
    "error_type": "TypeError",
    "step": "get_nonexistent"
  },
  {
    "error": true,
    "error_type": "TypeError",
    "step": "cancel_nonexistent"
  },
  {
    "error_code": -32601,
    "has_error": true,
    "step": "invalid_method"
  }
]
