crates/a2a-wasm-component/tests/snapshots/server_integration_test__send_message_success.snap
---
source: crates/a2a-wasm-component/tests/server_integration_test.rs
expression: steps
---
[
  {
    "has_responses": true,
    "response_count": 1,
    "step": "send_message"
  }
]
